:bug: Fix layer panel overflowing

--- a/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
@@ -55,6 +55,7 @@
   overflow-x: hidden;
   overflow-y: overlay;
   scrollbar-gutter: stable;
+  max-width: var(--width);
 }
 
 .pages-list {
